--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,19 @@
 <html lang="en" class="{% if page.url == '/' %}home{% else %}{{ page.url | slugify }}{% endif %}">
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}</title>
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 <a href="#main" class="audible">Skip to main content</a>
 <header role="banner" id="banner">
   <h1>{{ site.title }}</h1>
 </header>
 <nav id="global-navigation">
-  <a id="link-intro" href="/">Introduction</a>
-  <a id="link-frames-for-work" href="/frames-for-work/">Frame(s for) Work</a>
-  <a id="link-high-impact" href="/high-impact/">High Impact</a>
-  <a id="link-collaboration" href="/collaboration/">Collaboration</a>
-  <a id="link-diy-learning" href="/diy-learning/">DIY Learning</a>
-  <a id="link-ecological" href="/ecological/">Ecological</a>
-  <a id="link-conclusions" href="/conclusions/">Conclusions</a>
+  <a id="link-intro" href="{{ site.baseurl }}/">Introduction</a>
+  <a id="link-frames-for-work" href="{{ site.baseurl }}/frames-for-work/">Frame(s for) Work</a>
+  <a id="link-high-impact" href="{{ site.baseurl }}/high-impact/">High Impact</a>
+  <a id="link-collaboration" href="{{ site.baseurl }}/collaboration/">Collaboration</a>
+  <a id="link-diy-learning" href="{{ site.baseurl }}/diy-learning/">DIY Learning</a>
+  <a id="link-ecological" href="{{ site.baseurl }}/ecological/">Ecological</a>
+  <a id="link-conclusions" href="{{ site.baseurl }}/conclusions/">Conclusions</a>
 </nav>
 <main role="main" id="main">
 {{ content }}
