Moves introductory content to separate file.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 <a href="#main" class="audible">Skip to main content</a>
 <header role="banner" id="banner">
-  <h1>{{ site.title }}</h1>
+  <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 </header>
 <nav id="global-navigation">
-  <a id="link-intro" href="{{ site.baseurl }}/">Introduction</a>
+  <a id="link-intro" href="{{ site.baseurl }}/introduction/">Introduction</a>
   <a id="link-frames-for-work" href="{{ site.baseurl }}/frames-for-work/">Frame(s for) Work</a>
   <a id="link-high-impact" href="{{ site.baseurl }}/high-impact/">High Impact</a>
   <a id="link-collaboration" href="{{ site.baseurl }}/collaboration/">Collaboration</a>
