Adds background image for navigation. Updates layout.

--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,15 @@ property: value;
   box-sizing: border-box;
 }
 
+html,
+body {
+  margin:0;
+  padding:0;
+}
+
 html {
   font: 16px/1.5 "Helvetica", sans-serif;
   color: rgba(0,0,0,.75);
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 h2 {
@@ -63,7 +66,7 @@ header h1 {
 
 nav {
   font-size: .8rem;
-  padding: .5rem 0;
+  padding: 1rem 0;
 }
 
 nav a {
@@ -89,6 +92,27 @@ nav a:focus {
 
 nav a:active {
   color: rgba(0,0,0,.9);
+}
+
+
+#main {
+  max-width: 800px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#banner,
+#global-navigation {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.home #global-navigation {
+  background-image: url('i/ethicslab.jpg');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  min-height: 90vh;
 }
 
 /* Utility Classes */
