--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,18 @@ body {
   margin: 20px;
 }
 
+img {
+  max-width: 100%;
+  width: auto;
+}
+
+figure {
+  background: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.175);
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+
 h1 {
   font-size: 2.5rem;
   font-weight: 300;
