--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,27 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
+<ul id="facet-media" class="gallery">
+{% for record in site.data.media %}
+  {% if record.tags contains page.tag %}
+    <li>
+  {% if record.type == 'Image' %}
+  <img src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}.jpg" alt="">
+{% endif %}
+  {% if record.type == 'Video' %}
+    <video src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}.jpg" alt="">
+  <video src="rabbit320.webm" controls>
+  <p>Your browser doesn't support HTML5 video. Here is a <a href="rabbit320.webm">link to the video</a> instead.</p>
+  </video>
+  {% endif %}
+
+  <div class="description">
+  <p><strong>{{ record.caption }}</strong></p>
+  <p>{{ record.alternative_text }}</p>
+  </div>
+  </li>
+{% endif %}
+{% endfor %}
+</ul>
+
 {{ content }}
