--- a/styles.css
+++ b/styles.css
@@ -178,10 +178,25 @@ nav a:active {
   width: 1px;
 }
 
+.gallery {
+  list-style:none;
+  margin:0;
+  padding:0;
+  display:flex;
+
+  .description {
+    display:none;
+  }
+
+}
+
+
 @media screen and (min-width: 800px) {
 
 body {
-  margin-left: 30%;
+  max-width: 780px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 }
