--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,18 +4,21 @@ layout: default
 <h1>{{ page.title }}</h1>
 <ul id="facet-media" class="gallery">
 {% for record in site.data.media %}
-  {% if record.tags contains page.tag %}
+  {% capture tags %}
+    {{ record.tag1 }},{{ record.tag2 }},{{ record.tag3 }}
+  {% endcapture %}
+  {% if tags contains page.tag %}
     <li>
+      {{ record.type }} | {{ record.name }}
   {% if record.type == 'Image' %}
   <img src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}.jpg" alt="">
 {% endif %}
   {% if record.type == 'Video' %}
-    <video src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}.jpg" alt="">
-  <video src="rabbit320.webm" controls>
-  <p>Your browser doesn't support HTML5 video. Here is a <a href="rabbit320.webm">link to the video</a> instead.</p>
-  </video>
+    <video src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}." alt=""></video>
   {% endif %}
-
+  {% if record.type == 'Audio' %}
+  <audio src="{{ site.baseurl }}/assets/{{ record.name | remove: '/' | replace: ':','_' | replace: ' ','_' }}.wav" alt=""></audio>
+  {% endif %}
   <div class="description">
   <p><strong>{{ record.caption }}</strong></p>
   <p>{{ record.alternative_text }}</p>
