Adds font awesome icons.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en" class="{% if page.url == '/' %}home{% else %}{{ page.url | slugify }}{% endif %}">
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}</title>
+<script src="https://use.fontawesome.com/0f21921284.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Open+Sans:300,400,800" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 <a href="#main" class="audible">Skip to main content</a>
