First pass at icons and modal window for media.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}</title>
 <script src="https://use.fontawesome.com/0f21921284.js"></script>
+<script src="{{ site.baseurl }}/vex/js/vex.combined.min.js"></script>
+<script>vex.defaultOptions.className = 'vex-theme-os'</script>
+<link rel="stylesheet" href="{{ site.baseurl }}/vex/css/vex.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/vex/css/vex-theme-os.css" />
 <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Open+Sans:300,400,800" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 <a href="#main" class="audible">Skip to main content</a>
