--- a/styles.css
+++ b/styles.css
@@ -185,14 +185,10 @@ nav a:active {
   display:flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
-.gallery li {
-  display:block;
-  width: 30%;
-}
-.gallery .description {
+.gallery .content {
   display:none;
 }
 
