--- a/styles.css
+++ b/styles.css
@@ -188,8 +188,21 @@ nav a:active {
   justify-content: space-around;
 }
 
+.frames-for-work .gallery:after {
+  content: ' ';
+  width: 100px;
+  height: 3px;
+  margin: 0 auto 3rem;
+  background: rgba(0,0,0,0.25);
+}
 .gallery .content {
   display:none;
+}
+
+
+.frames-for-work .gallery .content {
+  display:block;
+  margin-bottom: 3rem;
 }
 
 .fa {
@@ -203,6 +216,10 @@ nav a:active {
   height: 4rem;
   line-height: 2;
   text-align: center;
+}
+
+.frames-for-work .fa {
+  display:none;
 }
 
 @media screen and (min-width: 800px) {
