Works cited page
- Adds link to Works Cited page in global navigation.
- Styles works cited content.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
   <a id="link-diy-learning" href="{{ site.baseurl }}/diy-learning/">DIY Learning</a>
   <a id="link-ecological" href="{{ site.baseurl }}/ecological/">Ecological</a>
   <a id="link-conclusions" href="{{ site.baseurl }}/conclusions/">Conclusions</a>
+  <a id="link-works-cited" href="{{ site.baseurl }}/works-cited">Works Cited</a>
 </nav>
 <main role="main" id="main">
 {{ content }}
