--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,11 @@ nav a:active {
 }
 
 
+.vex.vex-theme-os .vex-content {
+  width: 700px;
+}
+
+
 @media screen and (min-width: 800px) {
 
 body {
