Adds footer with author and designer credits.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,4 +30,7 @@
 <main role="main" id="main">
 {{ content }}
 </main>
+<footer>
+  <p>By Steph Ceraso and Matthew Pavesich | Jeremy Boggs, Designer</p>
+</footer>
 </html>
