First pass at updating navigation.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,21 @@
 </header>
 <nav id="global-navigation">
   <a id="link-intro" href="{{ site.baseurl }}/introduction/">Introduction</a>
+  <span>
   <a id="link-frames-for-work" href="{{ site.baseurl }}/frames-for-work/">Frame(s for) Work</a>
   <a id="link-high-impact" href="{{ site.baseurl }}/high-impact/">High Impact</a>
   <a id="link-collaboration" href="{{ site.baseurl }}/collaboration/">Collaboration</a>
   <a id="link-diy-learning" href="{{ site.baseurl }}/diy-learning/">DIY Learning</a>
   <a id="link-ecological" href="{{ site.baseurl }}/ecological/">Ecological</a>
+</span>
   <a id="link-conclusions" href="{{ site.baseurl }}/conclusions/">Conclusions</a>
-  <a id="link-works-cited" href="{{ site.baseurl }}/works-cited">Works Cited</a>
+</nav>
+
+<nav id="courtesy-navigation">
+  <a id="link-works-cited" href="{{ site.baseurl }}/works-cited">Works Cited</a> · 
   <a id="link-sites" href="{{ site.baseurl }}/sites">Sites</a>
 </nav>
+
 <main role="main" id="main">
 {{ content }}
 </main>
