Makes text column narrower on introduction and conclusion.

--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,11 @@ footer {
     zoom: 1;
   }
   
+  .introduction main,
+  .conclusions main {
+    padding-right: 40% !important;
+  }
+
   main > .content,
   main > .summary {
     float:left;
