Changes link to 'Field Sites'.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 </nav>
 
 <nav id="courtesy-navigation">
-  <a id="link-works-cited" href="{{ site.baseurl }}/works-cited">Works Cited</a> · 
-  <a id="link-sites" href="{{ site.baseurl }}/sites">Sites</a>
+  <a id="link-works-cited" href="{{ site.baseurl }}/works-cited">Works Cited</a> ·
+  <a id="link-sites" href="{{ site.baseurl }}/sites">Field Sites</a>
 </nav>
 
 <main role="main" id="main">
