Adds animation for DIY learning.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 <script src="{{ site.baseurl }}/vex/js/vex.combined.min.js"></script>
 {% if page.d3 %}
 <script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="{{ site.baseurl }}/js/raphael.min.js"></script>
 {% endif %}
 <script>vex.defaultOptions.className = 'vex-theme-os'</script>
 <link rel="stylesheet" href="{{ site.baseurl }}/vex/css/vex.css" />
